--- a/template/index.html
+++ b/template/index.html
@@ -1,53 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FlaskApp</title>
-    <style>
-        .todo {
-            padding: 20px;
-            margin: 10px;
-            background-color: #eee;
-        }
-    </style>
-</head>
-<body>
-    <h1>FlaskTODO</h1>
-    <hr>
-    <div class="content">
-    <form method="post">
-        <p>
-            <b><label for="content">Todo content</label></b>
-        </p>
-        <p>
-            <input type="text" name="content"
-                placeholder="Todo Content"></input>
-        </p>
+{% extends 'base.html' %}
+{% block body %}
+    <div class="container">
+        <form method="post">
+            <table class="cont">
+                <tbody>
+                    <tr>
+                        <b><label for="content">ToDo task </label></b>
+                    </tr>
+                    <tr>
+                        <input type="text" rows="2" class="form-control" name="content" placeholder="ToDo task"></input>
+                    </tr>
+                    <tr>
+                        <b><label for="desc">ToDo description</label></b>
+                    </tr>
+                    <tr>
+                        <input type="textbox" class="form-control" name="desc" placeholder="ToDo Description"></input>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b><label for="degree">Degree</label></b>
+                        </td>
+                        <tr>
+                        <td>
+                            <input id="degree-0" name="degree" required type="radio" value="Important">
+                            <label for="degree-0">Important</label>
+                        </td>
+                        <td>
+                            <input id="degree-1" name="degree" required type="radio" value="Unimportant">
+                            <label for="degree-1">Unimportant</label>
+                        </td>
+                    </tr>
 
-        <p>
-            <b><label for="degree">Degree</label></b>
-        </p>
-        <p>
-            <input id="degree-0" name="degree" required type="radio" value="Important">
-            <label for="degree-0">Important</label>
-        </p>
-        <p>
-            <input id="degree-1" name="degree" required type="radio" value="Unimportant">
-            <label for="degree-1">Unimportant</label>
-        </p>
-        <button type="submit">Submit</button>
-    </form>
-    <hr>
-    {% for todo in todos %}
-        <div class="todo">
-            <p>{{ todo['content'] }} <i>({{ todo['degree']}})</i></p>
-                        <form method="POST" action="{{ url_for('delete', id=todo['_id']) }}" >
-                <input type="submit" value="Delete Todo"
-                       onclick="return confirm('Are you sure you want to delete this entry?')">
-            </form>
-        </div>
-    {% endfor %}
-
+                    <tr>
+                        <td><button type="submit" class="btn btn-primary">Submit</button>
+                    </tr>
+            </table>
+        </form>
+        <div class="container">
+        <h2>Your ToDos</h2>
+        <table class="table" id = "t1">
+            <thead>
+                <tr>
+                    <th scope="col">SNo</th>
+                    <th scope="col">Task Title</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Degree</th>
+                    <th scope="col">Time</th>
+                    <th scope = "col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for todo in all_todos %}
+                <tr>
+                    <th scope="row">{{loop.index}}</th>
+                    <td>{{todo['content']}}</td>
+                    <td>{{todo.desc}}</td>
+                    <td>{{todo.degree}}</td>
+                    <td>{{todo.date_created}}</td>
+                    <td>
+                        <a href = "/delete/{{todo._id}}/" type = "button" onclick = "confirm('Are you sure to delete')" class = "btn btn-dark me-1">Delete</button>
+                        <a href = "/modify/{{todo._id}}/" type = "button" class = "btn btn-info">Modify</button>
+                
+                    </td>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-</body>
-</html>
+    </div>
+{% endblock body %}
+
